--- a/referenciaspersonales.html
+++ b/referenciaspersonales.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap');</style>
+    <link rel="StyleSheet" href="css/estilo.css">
     <title>Referencias personales</title>
 </head>
 <body>
-    <header><h1>REFERENCIAS PERSONALES</h1></header>
-    <nav>
-            <a href="index.html">|  Informacion Personal  |</a>
-            <a href="experiencialaboral.html">|  Experiencia Laboral  |</a>
-            <a href="referenciafamiliar.html">|  Referencia Familiar  |</a>
-            <a href="estudiosrealizados.html">|  Estudios Realizados  |</a>
+    <header>
+        <nav>
+            <a href="index.html">Informacion Personal</a>
+            <a href="experiencialaboral.html">Experiencia Laboral</a>
+            <a href="referenciafamiliar.html">Referencia Familiar</a>
+            <a href="estudiosrealizados.html">Estudios Realizados</a>
     </nav>
+        <h1>REFERENCIAS PERSONALES</h1>
+    </header>
+    
     <main>
         <section>
             <article>
@@ -45,9 +50,9 @@
             </article>
         </section>
         <aside>
-            <a href="Hoja De Vida Guillermo.pdf"><button > DESCARGA HOJA DE VIDA</button></a>
+            <a class="enlace" href="doc/Hoja De Vida Guillermo.pdf">DESCARGA HOJA DE VIDA</a>
         </aside>
     </main>
-    <footer> @ autor Guillermo Tordecilla Año 2022 - para SOFKA cantera uno </footer>
+    <footer> @ autor Guillermo Tordecilla Año 2022 - para SOFKA cantera uno  </footer>
 </body>
 </html>
