--- a/estudiosrealizados.html
+++ b/estudiosrealizados.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link id="estilos" rel="stylesheet" href="css/rojo.css">
     <style>@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap');</style>
-    
     <link rel="StyleSheet" href="css/estilo.css">
     <title>Estudios realizados</title>
 </head>
