--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hoja de vida</title>
-    <style>@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap');</style>
-    
+    <style>@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap');</style> 
     <link rel="StyleSheet" href="css/estilo.css">
+    <script src="js/estilo.js"></script>
 </head>
 <body>
     <header>
-        <nav>
-       
+    <nav>
             <a href="experiencialaboral.html">Experiencia Laboral</a>
             <a href="referenciaspersonales.html">Referencias Personales</a>
             <a href="referenciafamiliar.html">Referencias Familiares</a>
@@ -43,9 +42,13 @@
             <img src="img/foto.jpg" alt="foto personal"><br>
             <figcaption><i>foto personal</i></figcaption><br>
             </figure>
+            <a id="inicio"onclick="fondo3('estilo1')">TEMA INICAL</a>
+            <a id="rojo" onclick="fondo1('estilo2')">TEMA ROJO</a>
+            <a id="verde" onclick="fondo2('estilo3')">TEMA VERDE</a>
             <a href="doc/Hoja De Vida Guillermo.pdf"> DESCARGA HOJA DE VIDA</a>
         </aside>
     </main>
     <footer> @ autor Guillermo Tordecilla Año 2022 - para SOFKA cantera uno</footer>
+
 </body>
 </html>
